// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropMenuButton default 1`] = `
<div
  className="sc-kjoXOD cbOzWc sc-dVhcbM fmqshT sc-fBuWsC esxzuT"
  disabled={false}
  type="customs"
>
  <span
    className="sc-hqyNC cVonoo"
    disabled={false}
    type="customs"
  />
  <div
    className="sc-cHGsZl idlfaG sc-fMiknA jQpXOp"
  >
    <span
      checked={false}
      className="sc-TOsTZ hHdGcd sc-gisBJw dxxmAW"
      disabled={false}
      type="customs"
    >
      <input
        className="sc-jhAzac ktwQQd"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      />
    </span>
    <span
      checked={false}
      className="sc-kvZOFW cmKQDd"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="customs"
    >
      <input
        className="sc-jhAzac ktwQQd"
        disabled={false}
        onBlur={[Function]}
        type="button"
      />
      <i
        className="lugia-icon-direction_down  sc-gzVnrw VXFcC"
      />
    </span>
  </div>
</div>
`;

exports[`DropMenuButton divided={false} 1`] = `
<div
  checked={false}
  className="sc-eqIVtm gsVLrt sc-dVhcbM fmqshT sc-fBuWsC esxzuT"
  disabled={false}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="customs"
>
  <input
    className="sc-jhAzac ktwQQd"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  />
  <div
    className="sc-fAjcbJ iDpLut sc-fMiknA jQpXOp"
  >
    <span
      className="sc-gisBJw dxxmAW"
    />
    <span
      className="sc-caSCKo gSTuqa"
    >
      <i
        className="lugia-icon-direction_down  sc-gzVnrw VXFcC"
      />
    </span>
  </div>
</div>
`;

exports[`DropMenuButton type=basic 1`] = `
<div
  className="sc-kgAjT hsfVKf sc-fBuWsC esxzuT"
>
  <div
    checked={false}
    className="sc-cJSrbW dAINER sc-fMiknA jQpXOp"
    disabled={false}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <input
      className="sc-jhAzac ktwQQd"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      type="button"
    />
    <span
      checked={false}
      className="sc-ksYbfQ fqSvil"
      disabled={false}
    >
      <span
        className="sc-hmzhuo eukXps"
      />
      <span
        className="sc-frDJqD Jidnp sc-caSCKo gSTuqa"
      >
        <i
          className="lugia-icon-direction_down  sc-gzVnrw VXFcC"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`DropMenuButton type=primary,divided={true} 1`] = `
<div
  className="sc-kjoXOD cbOzWc sc-dVhcbM ejAFoU sc-fBuWsC esxzuT"
  disabled={false}
  type="primary"
>
  <span
    className="sc-hqyNC ihtyDX"
    disabled={false}
    type="primary"
  />
  <div
    className="sc-cHGsZl idlfaG sc-fMiknA jQpXOp"
  >
    <span
      checked={false}
      className="sc-TOsTZ fAoYml sc-gisBJw dxxmAW"
      disabled={false}
      type="primary"
    >
      <input
        className="sc-jhAzac ktwQQd"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      />
    </span>
    <span
      checked={false}
      className="sc-kvZOFW bzhpRh"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="primary"
    >
      <input
        className="sc-jhAzac ktwQQd"
        disabled={false}
        onBlur={[Function]}
        type="button"
      />
      <i
        className="lugia-icon-direction_down  sc-gzVnrw VXFcC"
      />
    </span>
  </div>
</div>
`;
